Added entitlements